src/styles/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  background-color: whitesmoke;
  width: 100vw;
}

h1,
h2 {
  font-weight: normal;
  margin-bottom: 15px;
}

.page {
  min-height: 100vh;
  padding: 20px;
}

.page > *:last-child {
  margin: 0;
}

footer {
  height: 100px;
  background-color: #669900;
  color: white;
  font-size: 14px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.loading {
  display: grid;
  place-items: center;
}

.loading img {
  max-width: 600px;
  max-height: 70vh;
}

@media (orientation: portrait) {
  .loading img {
    width: 100%;
    max-height: 100%;
  }
}

@media only screen and (max-width: 440px) {
  .page {
    padding: 20px 0;
  }
}

